// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-character-count Max Length 1`] = `
<div
  class="m-character-count"
>
  <div
    aria-hidden="true"
    aria-live="polite"
    class="m-character-count__wrap"
  >
    <span>
      20
    </span>
    /40
  </div>
</div>
`;

exports[`Storyshots modul-components|m-character-count Transition 1`] = `
<div
  class="m-character-count"
>
  <div
    aria-hidden="true"
    aria-live="polite"
    class="m-character-count__wrap"
  >
    <span>
      20
    </span>
    /40
  </div>
</div>
`;

exports[`Storyshots modul-components|m-character-count default 1`] = `
<div
  class="m-character-count"
>
  <div
    aria-hidden="true"
    aria-live="polite"
    class="m-character-count__wrap"
  >
    <span>
      200
    </span>
    /2000
  </div>
</div>
`;
